--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^5.0.5",
     "mongoose": "^4.1.4",
     "morgan": "^1.6.1",
+    "nodemailer": "^1.8.0",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "q": "^1.4.1",
