--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "socket.io": "^1.3.6"
   },
   "devDependencies": {
+    "chai": "^3.3.0",
     "gulp": "^3.9.0",
-    "gulp-jshint": "^1.11.2"
+    "gulp-jshint": "^1.11.2",
+    "gulp-mocha": "^2.1.3",
+    "gulp-util": "^3.0.6",
+    "sinon": "^1.17.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
