--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "q": "^1.4.1",
+    "request": "^2.65.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.6"
   },
