--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "readme": "README.md",
   "main": "server.js",
   "dependencies": {
+    "amqplib": "^0.4.1",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
