--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "prod": "NODE_ENV=production PORT=3001 nodemon server.js"
   },
   "repository": {
     "type": "git",
